# ntropy-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  example.py  playground.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-app.yml
ntropy_sdk/: __init__.py  __main__.py  account_holders.py  bank_statements.py  batches.py  benchmark.py  categories.py  entities.py  errors.py  http.py  income_check.py  models.py  ntropy_sdk.py  paging.py  recurring_payments.py  reports.py  rules.py  sdk.py  subscription_management.py  subscriptions.py  test_sdk.py  transactions.py  utils.py  v3.py  version.py  webhooks.py
ntropy_sdk/async_/: http.py  paging.py  sdk.py
ntropy_sdk/v2/: __init__.py  bank_statements.py  errors.py  ntropy_sdk.py  recurring_payments.py
ntropy_sdk/v3/: __init__.py  account_holders.py  bank_statements.py  batches.py  paging.py  transactions.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_datasources.py  test_income_check.py  test_models.py  test_recurring_payments.ipynb  test_recurring_payments.py  test_sdk.py  test_subscriptions.ipynb  test_subscriptions.py
tests/v2/: conftest.py  test_bank_statements.py  test_income_check.py  test_recurring_payments.py  test_sdk.py  test_v2_sdk.py
tests/v3/: conftest.py  test_async_sdk.py  test_sdk.py
