[tool.poetry]
name = "ntropy_sdk"
version = "3.5.0"
description = "Ntropy SDK"
authors = ["Ntropy <hello@ntropy.network>"]
license = "MIT"
packages = [
    { include = "ntropy_sdk", from = "." }
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"

[tool.poetry.extras]
benchmark = ["pandas", "scikit-learn", "numpy"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.11b1", allow-prereleases = true}
flake8 = "^4.0.1"

[tool.poetry.scripts]
ntropy-benchmark = "ntropy_sdk.__main__:benchmark"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
